VSE: Retiming keys issues in Blender 4.0.2 #115655

Closed
opened 2023-12-01 11:41:28 +01:00 by Mohamed · 4 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 531.41

Blender Version
Broken: version: 4.0.2 Release Candidate, branch: blender-v4.0-release, commit date: 2023-11-27 18:49, hash: cde438df8121
Worked:

Short description of error

Exact steps for others to reproduce the error
All is explained in attached video

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 531.41 **Blender Version** Broken: version: 4.0.2 Release Candidate, branch: blender-v4.0-release, commit date: 2023-11-27 18:49, hash: `cde438df8121` Worked: **Short description of error** * Box selecting keys doesn't work * Can't add freeze keys unless the strip is selected * When one of the transition keys is removed, the remaining one behaves wrongly * A mistake in the documentation page https://docs.blender.org/manual/en/latest/video_editing/edit/montage/editing.html#smooth-transitions **Exact steps for others to reproduce the error** All is explained in attached video <video src="/attachments/fbdf5932-33dc-4944-b575-c895559aafee" title="Retiming.mp4" controls></video>
Mohamed added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-12-01 11:41:28 +01:00
Member

Hi, thanks for the report. I can confirm (except freeze frame, which seems to be working in 4.1)
cc @iss

Hi, thanks for the report. I can confirm (except `freeze frame`, which seems to be working in 4.1) cc @iss
Pratik Borhade added
Module
VFX & Video
Status
Confirmed
Interest
Video Sequencer
and removed
Status
Needs Triage
labels 2023-12-04 08:07:33 +01:00

@PratikPB2123 Can you confirm issues with box select? I am not able to.
The freeze frame issue happens, because you have selected a transition key. When key is selected, it will convert selected key into a freeze frame. At least it should emmit an error message then.

@PratikPB2123 Can you confirm issues with box select? I am not able to. The freeze frame issue happens, because you have selected a transition key. When key is selected, it will convert selected key into a freeze frame. At least it should emmit an error message then.
Author

@iss I found later that it happens only when the Tweak tool is selected if you click and drag without pressing B before. Works fine when the Select Box tool is selected.

@iss I found later that it happens only when the Tweak tool is selected if you click and drag without pressing B before. Works fine when the Select Box tool is selected.

@MumuMundo Thanks for clarifying, that is expected behavior. The idea was to make retiming keys and strips selectable without context/mode switching, and to make this as natural as possible.

Just FYI I have created feedback thread on devtalk, so you can suggest improvements there - https://devtalk.blender.org/t/vse-strip-retiming-feedback/32581

@MumuMundo Thanks for clarifying, that is expected behavior. The idea was to make retiming keys and strips selectable without context/mode switching, and to make this as natural as possible. Just FYI I have created feedback thread on devtalk, so you can suggest improvements there - https://devtalk.blender.org/t/vse-strip-retiming-feedback/32581
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-03 17:02:07 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115655
No description provided.