source/blender/editors/space_sequencer/sequencer_retiming.cc
@@ -901,22 +901,26 @@ int sequencer_retiming_key_remove_exec(bContext *C, wmOperator * /* op */)
 {
   Scene *scene = CTX_data_scene(C);
 
-  blender::Vector<Sequence *> strips_to_handle;
-  blender::Vector<SeqRetimingKey *> keys_to_delete;
   blender::Map selection = SEQ_retiming_selection_get(SEQ_editing_get(scene));
+  blender::Vector<Sequence *> strips_to_handle;
 
-  for (auto item : selection.items()) {
-    /* First and last key can not be removed. */
-    if (item.key->strip_frame_index == 0 || SEQ_retiming_is_last_key(item.value, item.key)) {
-      continue;
-    }
-
-    strips_to_handle.append_non_duplicates(item.value);
-    keys_to_delete.append(item.key);
+  for (Sequence *seq : selection.values()) {
+    strips_to_handle.append_non_duplicates(seq);
   }
 
   for (Sequence *seq : strips_to_handle) {
+    blender::Vector<SeqRetimingKey *> keys_to_delete;
+    for (auto item : selection.items()) {
+      if (item.value != seq) {
+        continue;
+      }
+      keys_to_delete.append(item.key);
+    }
+
     SEQ_retiming_remove_multiple_keys(seq, keys_to_delete);
+  }
+
+  for (Sequence *seq : strips_to_handle) {
     SEQ_relations_invalidate_cache_raw(scene, seq);
   }
 
